--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "scripts": {
     "dev": "next dev",
+    "prebuild": "echo echo $MY_SECRET",
     "build": "next build",
     "start": "next start",
     "export": "next build && next export"
